fix listing items alignment

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -339,6 +339,7 @@
 
   .filler-div {
     width: 222px;
+    height: 0;
     margin: 20px 4%;
   }
 
